--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,8 +11,10 @@ on:
 
 jobs:
   pull-request:
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v2
@@ -23,20 +25,27 @@ jobs:
           source_branch: "development"
           destination_branch: "main"
           pr_title: "Development to Main"
-          pr_body: "An automatic PR from the development branch"
-          pr_label: "auto-pr"
           pr_allow_empty: true
+        env:
+          MY_PAT: ${{ secrets.MY_PAT }}
 
   version:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    needs: pull-request
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Version
+      - name: Configure Git
         run: |
-          npm install
-          npm run version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+
+      - name: Release
+        uses: google-github-actions/release-please-action@v3
+        with:
+          release-type: node
+          package-name: my-package
         env:
-          MY_PAT: ${{ secrets.MY_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
