--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: PR on Push & Version on Merge
+name: PR on Push & Release on Merge
 
 on:
   push:
@@ -12,38 +12,47 @@ on:
 jobs:
   pull-request:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-
     steps:
       - uses: actions/checkout@v2
-
-      - name: Pull Request
-        uses: repo-sync/pull-request@v2
         with:
-          source_branch: "development"
-          destination_branch: "main"
-          pr_title: "Development to Main"
-          pr_allow_empty: true
-        env:
-          MY_PAT: ${{ secrets.MY_PAT }}
+          node-version: 16
 
-  version:
+      # Other PR job steps
+
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [16]
+
+    steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - uses: actions/checkout@v2
+        with:
+          node-version: 16
+
+      - run: npm install
+      - run: npm run build
+
+  release:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: pull-request
+    needs: [pull-request, build]
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          node-version: 16
 
       - name: Configure Git
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
 
-      - name: Release
-        uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
           package-name: my-package
