--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -60,3 +60,7 @@ jobs:
           package-name: my-package
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull main branch
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          git pull origin main
