--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,66 +1,59 @@
-name: PR on Push & Release on Merge
+name: CI
 
-on:
-  push:
-    branches:
-      - development
-
+on: 
   pull_request:
-    branches: [main]
+    branches:
+      - main
     types: [closed]
 
 jobs:
-  pull-request:
+
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+    
+    - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
+    - uses: actions/setup-node@v3
 
-    # Other PR job steps
-
+    - run: npm install
+    - run: npm test
+        
   build:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [16]
 
     steps:
-      - uses: actions/checkout@v3
+    
+    - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
+    - uses: actions/setup-node@v3
 
-      - run: npm install
-      - run: npm run build
+    - run: npm install
+    - run: npm run build
 
   release:
-    if: github.event.pull_request.merged == true
+
+    if: github.event.pull_request.merged == true 
+    
     runs-on: ubuntu-latest
-    needs: [pull-request, build]
 
     steps:
-      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
+    - uses: actions/checkout@v3
 
-      - name: Configure Git
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "actions@github.com"
+    - uses: actions/setup-node@v3
 
-      - uses: google-github-actions/release-please-action@v3
-        with:
-          release-type: node
-          package-name: my-package
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Pull main branch
-        if: ${{ github.ref == 'refs/heads/main' }}
-        run: |
-          git pull origin main
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.61.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: patch
+
+    - name: Create Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
