--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,59 +1,67 @@
-name: CI
+name: PR on Push & Release on Merge
 
-on: 
-  pull_request:
+on:
+  push:
     branches:
-      - main
+      - development
+
+  pull_request:
+    branches: [main]
     types: [closed]
 
 jobs:
-
-  test:
+  pull-request:
     runs-on: ubuntu-latest
     steps:
-    
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-    - run: npm install
-    - run: npm test
-        
+    # Other PR job steps
+    # - name: Run tests
+
   build:
-
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [16]
 
     steps:
-    
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-    - run: npm install
-    - run: npm run build
+      - run: npm install
+      - run: npm run build
+
+      - name: Skip Tests
+        if: ${{ github.event_name == 'pull_request' }}
+        run: echo "Skipping tests for PR"
 
   release:
-
-    if: github.event.pull_request.merged == true 
-    
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    needs: [pull-request, build]
 
     steps:
+      - uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
 
-    - uses: actions/setup-node@v3
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.61.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
 
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.61.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
-
-    - name: Create Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
