--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "version": "standard-version"
+    "release": "standard-version"
   },
   "eslintConfig": {
     "extends": [
