--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,9 +20,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [16]
 
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +27,9 @@ jobs:
         with:
           node-version: 16
 
-      - run: npm install
+      - name: Install Dependencies
+        run: npm ci
+
       - run: npm run build
 
   release:
