updated YAML file

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: 16
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       - run: npm run build
 
