--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -52,5 +52,5 @@ jobs:
         env:
           MY_PAT: ${{ secrets.MY_PAT }}
         run: |
-          npm run release
+          npx standard-version
           git push --follow-tags origin main
