--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: PR on Push & Release on Merge
+name: Auto Pull Request and Auto Merge
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
 
       - run: npm run build
 
-  release:
+  merge:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: [pull-request, build]
@@ -48,9 +48,17 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
 
-      - name: Create Release
-        env:
-          MY_PAT: ${{ secrets.MY_PAT }}
+      - name: Merge Pull Request
         run: |
-          npx standard-version
-          git push --follow-tags origin main
+          git merge --no-ff ${{ github.event.pull_request.head.sha }} -m "Merge pull request #${{ github.event.pull_request.number }}"
+
+      - name: Tag Release
+        run: |
+          # Assuming you have a version in your package.json
+          version=$(node -p -e "require('./package.json').version")
+          git tag -a "v${version}" -m "Release v${version}"
+          git push origin "v${version}"
+      - name: Cleanup
+        run: |
+          # Delete the feature branch after merging
+          git branch -d "${{ github.head_ref }}"
